Troca de mensagem

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<link rel="stylesheet" href="css/estilo.css">
   </head>
   <body>
-    <h1>__Marcia____</h1>
-    <p> Mamae, feliz dia das maes, te amo do fundo do meu coracao </p>
+    <h1> Marcia </h1>
+    <p> Mamae, feliz dia das mães, te amo do fundo do meu coração. Você é linda e muito especial, você é a minha mãe preferida! </p>
 		<br>
 		<p>Assinado: Nicoly Thifanny Santos Neres </p>
   </body>
